--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .header{
     display:flex;
     justify-content: space-around;
@@ -15,18 +16,28 @@
 .top-fourth-mid{
     display:flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .top-fourth-mid-left{
     display:flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
     width: 500px;
+    margin-bottom: 32px;
+}
+
+.top-fourth-mid-right{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .top-fourth{
     background-color: #1F2937;
     color: #F9FaF8;
+    min-height: 25em;
 }
 
 .second{
@@ -34,6 +45,7 @@
     justify-content: center;
     align-items:center;
     flex-direction: column;
+    min-height: 25em;
 }
 
 .second-bottom{
@@ -45,4 +57,26 @@
     display:flex;
     gap:24px;
     
+}
+
+.third-fromtop{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #E5E7EB;
+    min-height: 25em;
+}
+
+.third-quote{
+    font-style: italic;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: lighter;
+}
+.third-source{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 25em;
+    margin-top: -32px;
+    font-weight: bolder;
 }
