--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+.container{
+    margin:0px 75px;
+}
 
 .header{
     display:flex;
@@ -46,6 +49,8 @@
     align-items:center;
     flex-direction: column;
     min-height: 25em;
+    background-color: #F9FaF8;
+    padding-bottom: 100px;
 }
 
 .second-bottom{
@@ -86,7 +91,7 @@
     justify-content: center;
     align-items: center;
     min-height: 25em;
-   
+    background-color: #F9FaF8;
 }
 
 .fourth-content{
